# hpxMP

./: .gitignore  Makefile  README.md  asm_functions.s  asyncMP.cpp  hpxMP.cpp  hpxMP.h  hpx_runtime.cpp  hpx_runtime.h  hpxcMP.cpp  icv-vars.h  intel_hpxMP.cpp  intel_hpxMP.h  kmp_atomic.cpp  kmp_atomic.h  kmpc-diff.txt  loop_data.cpp  loop_data.h  loop_schedule.cpp  loop_schedule.h  par_region.h  schedule.cpp  uh_loops.cpp  uh_loops.h
hpx/: local_priority_queue_scheduler.hpp  omp_dual_queue_scheduler.hpp
hpx-tests/: 1d_stencil_3_omp_task.cpp  Makefile  exec_test.cpp  fibonacci.cpp  hpx-lu.cpp  lu-utils.cpp  micro-bench.cpp
hpx/bench/: Makefile  fibonacci.cpp  hpx-mmult.cpp  hpx-startup.cpp  hpx-taskbench.cpp  hpx-wait-bench.cpp  lu-hpx-dataflow.cpp  lu-local.h  matrix_block.h  micro-bench.cpp  task-chain.cpp
hpx/bench/lu/: Makefile  lu-hpx-dataflow.cpp  lu-local.cpp  lu-utils.cpp
hpx/jacobi_smp/: Makefile  jacobi.cpp  jacobi.hpp  jacobi_hpx.cpp  jacobi_omp.cpp
hpx/tests/: Makefile  barrier_test.cpp  hpxMP-fib.cpp  omp_queue_test.cpp  target.run  target_test.cpp  vla-test.cpp
hpx/tests/executors/: Makefile  static_test.cpp
hybrid-tests/: hello.cpp
omp-tests/: .omp-par.w2c.c.swp  Makefile  fib.c  hpx-lu.cpp  hpxMP-fib.cpp  old-fib.c  omp-barrier.c  omp-crit.c  omp-fib.c  omp-fib.w2c.c  omp-firstprivate.c  omp-for-decrement.c  omp-for-dynamic.c  omp-for-nowait.c  omp-for-shared.c  omp-for-simple.c  omp-for.c  omp-lu-orig.c  omp-master.c  omp-par.c  omp-sections.c  omp-single.c  omp-task  omp-task.c  omp-thrdprvt.c  task_spawn_time.c
omp-tests/IR/: Makefile  a.out  omp-for-dynamic.w2c.c  omp-for.w2c.c  omp-for.w2c.h  omp-nested-par.w2c.c  omp-nested-par.w2c.h  omp-par.w2c.c
omp-tests/bots/: NOTES
omp-tests/bots/common/: Makefile.common
omp-tests/bots/config/: make.config
omp-tests/bots/omp-tasks/: Makefile
omp-tests/bots/run/: run.common
omp-tests/epcc/caf/: Makefile  README.txt  cafbench.f90  cafclock.f90  cafcore.f90  cafhalo.f90  cafhalodriver.f90  cafparams.f90  cafpt2pt.f90  cafpt2ptdriver.f90  cafsync.f90  cafsyncdriver.f90
omp-tests/epcc/omp_v2/: README
omp-tests/epcc/omp_v3/: README
omp-tests/mpi/ex1/: fdm1.f90  kongull.pbs
omp-tests/mpi/ex2/: Makefile  vilje.pbs
omp-tests/mpi/ex3/: lu.f90  vilje.pbs
omp-tests/mpi/ex7/: vilje.pbs
omp-tests/mpic2/: Makefile  README  mpic2.f90
omp-tests/strassen/: .strassen.c.swp  omp-strassen  strassen.c  tags
omp/apps/: mpic2.tar
omp/apps/mpi/: README
omp/apps/mpic2/: MPUSH2_H.mod  Makefile  OMPLIB_H.mod  cmpic2  fmpic2  mpic2.c
omp/benchmarks/LU/: Makefile  lu-dataflow.cpp  lu-dep-timed.c  lu-local.cpp  lu-local.h  lu-utils.cpp  lu-utils.h  omp-task.c
omp/benchmarks/bots/: Makefile  configure
omp/benchmarks/epcc/: common.cpp  common.h  taskbench.cpp  taskbench.h
omp/benchmarks/kastors-1.1/: Makefile.am  README
omp/benchmarks/kastors-1.1/common/: main.h
omp/benchmarks/kastors-1.1/jacobi/: Makefile.in
omp/benchmarks/kastors-1.1/jacobi/src/: jacobi-block-task-dep.c  jacobi-block-task.c  jacobi-task-dep.c  jacobi-task.c  poisson.c
omp/benchmarks/kastors-1.1/plasma/: Makefile.am  Makefile.in
omp/benchmarks/kastors-1.1/plasma/include/: compute_d.h  core_blas.h  core_dblas.h  dauxiliary.h  flops.h  plasma.h  plasma_d.h  plasmatypes.h  random.h  timing.h  workspace.h
omp/benchmarks/kastors-1.1/plasma/src/: auxiliary.c  core_dlaswp.c  core_dormqr.c  core_dpamm.c  core_dplrnt.c  core_dtsqrt.c  dpotrs.c  global.c  pdgetrf_rectil.c  pdlaswp.c  pdormqr.c  pdplgsy.c  pdpltmg.c  pdtile.c  pdtrsm.c  time_dgeqrf-task.c  workspace.c
omp/benchmarks/kastors-1.1/sparselu/include/: sparselu.h
omp/benchmarks/kastors-1.1/sparselu/src/: sparselu-task-dep.c  sparselu.c
omp/benchmarks/kastors-1.1/strassen/: Makefile.am  Makefile.in  main.c
omp/benchmarks/kastors-1.1/strassen/src/: strassen-seq.c  strassen-task-dep.c  strassen-task.c  strassen.c
omp/benchmarks/openmpbench_C_v3/: arraybench_19683  arraybench_243  arraybench_6561  arraybench_729  arraybench_81  hectorxe6.pbs  schedbench  syncbench  taskbench
omp/benchmarks/tasks/: Makefile  task-chain.cpp  task-spawn.cpp
omp/benchmarks/tied-imbalance/: Makefile  big_little_task.cpp  imbalanced_task.cpp
omp/tests/: Makefile  runtests.sh
omp/tests/mmult/: bench  benchmark.h  mm_funcs.h  strass.c
omp/tests/omp4/: target-test.cpp
omp/tests/src/: omp-crit.c  omp-for-dynamic.c  omp-for-nested.c  omp-for-private.c  omp-for.c  omp-lu.c  omp-nested-par.c  omp-num-thread.c  omp-par-single.c  omp-simple-task.c  omp-single-copyprivate.c  omp-task-dep.c  omp-task-fp.c  omp-task-tree.c  omp-task.simple.c  omp-thrdprvt.c  omp-threadprivate.c  task_spawn_time.c
omp/tests/strassen/: strassen.h
simple-omp/: Makefile  omp-par  omp-par.w2c.h
src/: CMakeLists.txt  Makefile  exports_so.txt  hpx_runtime.cpp  hpx_runtime.h  intel_hpxMP.cpp  intel_hpxMP.h  kmp_atomic.h  loop_schedule.cpp
tests/hpx/: omp_dual_queue_scheduler.hpp
tests/hpx/bench/: Makefile  hpx-taskbench.cpp  hpx-wait-bench.cpp  matrix_block.h  micro-bench.cpp  mmult-serial.cpp  quicksort.cpp  task-chain.cpp  task-spawn.cpp
tests/hpx/jacobi_smp/: jacobi.cpp  (+1 more)
tests/hybrid-tests/: Makefile  hello
tests/omp/benchmarks/kastors-1.1/: Makefile.in  configure  configure.ac  run.sh
tests/omp/benchmarks/kastors-1.1/jacobi/: Makefile.am
tests/omp/benchmarks/kastors-1.1/jacobi/src/: jacobi-block-for.c  jacobi-block-task-dep.c  jacobi-seq.c  jacobi-task-dep.c
tests/omp/benchmarks/kastors-1.1/plasma/include/: auxiliary.h  common.h  descriptor.h  tile.h
tests/omp/benchmarks/kastors-1.1/plasma/src/: core_dgeqrt.c  core_dgetrf_rectil.c  core_dparfb.c  core_dplgsy.c  core_dtsmqr.c  dauxiliary.c  descriptor.c  dgeqrs.c  dgetrs.c  pdgeqrf.c  pdpotrf.c  time_dgetrf-task.c  time_dpotrf-task.c  timing.inc
tests/omp/benchmarks/kastors-1.1/sparselu/: Makefile.am  Makefile.in
tests/omp/benchmarks/kastors-1.1/sparselu/src/: sparselu-seq.c  sparselu-task.c
tests/omp/benchmarks/kastors-1.1/strassen/include/: strassen.h
tests/omp/benchmarks/kastors-1.1/strassen/src/: strassen-task-dep.c
(+229 files in other folders)
